--- a/app/config.conf
+++ b/app/config.conf
@@ -8,7 +8,7 @@ xsrf_cookies = True
 port = 8000
 login_url = '/login'
 
-mysql_database = 'zyf01'
+mysql_database = 'ydgf'
 mysql_host = 'localhost'
 mysql_user = 'root'
 mysql_password = 'root'
