--- a/app/config.conf
+++ b/app/config.conf
@@ -6,7 +6,7 @@ cookie_secret = 'f'
 cookie_domain = 'localhost'
 xsrf_cookies = True
 port = 8000
-login_url = '/login'
+login_url = '/sys/login'
 
 mysql_database = 'ydgf'
 mysql_host = 'localhost'
